--- a/env/prod.env.example
+++ b/env/prod.env.example
@@ -1,7 +1,7 @@
 # 1 rename this file to prod.env and fill in the values
 # 2 add file to gitignore
 # service configuration
-TEST_USERNAME=
-TEST_PASSWORD=
-URL=
-BASE_API=
+TEST_USERNAME=daniil_brd
+TEST_PASSWORD=Z3x4W5y6
+URL=https://fe-delivery.tallinn-learning.ee/
+BASE_API=https://backend.tallinn-learning.ee
